--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
