--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
+    "@reduxjs/toolkit": "^1.9.4",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "uuid": "^9.0.0",
     "yup": "^1.0.2"
